Apply major code formatting