@@ -1,5 +1,9 @@
-// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be found in the LICENSE file.
+// Copyright 2000-2020 JetBrains s.r.o. Use of this source code is governed by the Apache 2.0 license that can be
+// found in the LICENSE file.
 package org.jetbrains.java.decompiler.main;
+
+import java.util.*;
+import java.util.Map.Entry;
 
 import org.jetbrains.java.decompiler.code.CodeConstants;
 import org.jetbrains.java.decompiler.main.ClassesProcessor.ClassNode;
@@ -19,220 +23,257 @@ import org.jetbrains.java.decompiler.struct.gen.VarType;
 import org.jetbrains.java.decompiler.util.InterpreterUtil;
 import org.jetbrains.java.decompiler.util.VBStyleCollection;
 
-import java.util.*;
-import java.util.Map.Entry;
-
 public final class ClassReference14Processor {
-  private static final ExitExprent BODY_EXPR;
-  private static final ExitExprent HANDLER_EXPR;
 
-  static {
-    InvocationExprent invFor = new InvocationExprent();
-    invFor.setName("forName");
-    invFor.setClassname("java/lang/Class");
-    invFor.setStringDescriptor("(Ljava/lang/String;)Ljava/lang/Class;");
-    invFor.setDescriptor(MethodDescriptor.parseDescriptor("(Ljava/lang/String;)Ljava/lang/Class;"));
-    invFor.setStatic(true);
-    invFor.setLstParameters(Collections.singletonList(new VarExprent(0, VarType.VARTYPE_STRING, null)));
-    BODY_EXPR = new ExitExprent(ExitExprent.EXIT_RETURN, invFor, VarType.VARTYPE_CLASS, null);
+	private static final ExitExprent BODY_EXPR;
+	private static final ExitExprent HANDLER_EXPR;
 
-    InvocationExprent ctor = new InvocationExprent();
-    ctor.setName(CodeConstants.INIT_NAME);
-    ctor.setClassname("java/lang/NoClassDefFoundError");
-    ctor.setStringDescriptor("()V");
-    ctor.setFunctype(InvocationExprent.TYP_INIT);
-    ctor.setDescriptor(MethodDescriptor.parseDescriptor("()V"));
-    NewExprent newExpr = new NewExprent(new VarType(CodeConstants.TYPE_OBJECT, 0, "java/lang/NoClassDefFoundError"), new ArrayList<>(), null);
-    newExpr.setConstructor(ctor);
-    InvocationExprent invCause = new InvocationExprent();
-    invCause.setName("initCause");
-    invCause.setClassname("java/lang/NoClassDefFoundError");
-    invCause.setStringDescriptor("(Ljava/lang/Throwable;)Ljava/lang/Throwable;");
-    invCause.setDescriptor(MethodDescriptor.parseDescriptor("(Ljava/lang/Throwable;)Ljava/lang/Throwable;"));
-    invCause.setInstance(newExpr);
-    invCause.setLstParameters(
-      Collections.singletonList(new VarExprent(2, new VarType(CodeConstants.TYPE_OBJECT, 0, "java/lang/ClassNotFoundException"), null)));
-    HANDLER_EXPR = new ExitExprent(ExitExprent.EXIT_THROW, invCause, null, null);
-  }
+	static
+	{
+		InvocationExprent invFor = new InvocationExprent();
+		invFor.setName("forName");
+		invFor.setClassname("java/lang/Class");
+		invFor.setStringDescriptor("(Ljava/lang/String;)Ljava/lang/Class;");
+		invFor.setDescriptor(MethodDescriptor.parseDescriptor("(Ljava/lang/String;)Ljava/lang/Class;"));
+		invFor.setStatic(true);
+		invFor.setLstParameters(Collections.singletonList(new VarExprent(0, VarType.VARTYPE_STRING, null)));
+		BODY_EXPR = new ExitExprent(ExitExprent.EXIT_RETURN, invFor, VarType.VARTYPE_CLASS, null);
 
-  public static void processClassReferences(ClassNode node) {
-    // find the synthetic method Class class$(String) if present
-    Map<ClassWrapper, MethodWrapper> mapClassMeths = new HashMap<>();
-    mapClassMethods(node, mapClassMeths);
-    if (mapClassMeths.isEmpty()) {
-      return;
-    }
+		InvocationExprent ctor = new InvocationExprent();
+		ctor.setName(CodeConstants.INIT_NAME);
+		ctor.setClassname("java/lang/NoClassDefFoundError");
+		ctor.setStringDescriptor("()V");
+		ctor.setFunctype(InvocationExprent.TYP_INIT);
+		ctor.setDescriptor(MethodDescriptor.parseDescriptor("()V"));
+		NewExprent newExpr = new NewExprent(new VarType(CodeConstants.TYPE_OBJECT, 0,
+				"java/lang/NoClassDefFoundError"), new ArrayList<>(), null);
+		newExpr.setConstructor(ctor);
+		InvocationExprent invCause = new InvocationExprent();
+		invCause.setName("initCause");
+		invCause.setClassname("java/lang/NoClassDefFoundError");
+		invCause.setStringDescriptor("(Ljava/lang/Throwable;)Ljava/lang/Throwable;");
+		invCause.setDescriptor(MethodDescriptor.parseDescriptor("(Ljava/lang/Throwable;)Ljava/lang/Throwable;"));
+		invCause.setInstance(newExpr);
+		invCause.setLstParameters(
+				Collections.singletonList(new VarExprent(2, new VarType(CodeConstants.TYPE_OBJECT, 0, "java/lang" +
+						"/ClassNotFoundException"), null)));
+		HANDLER_EXPR = new ExitExprent(ExitExprent.EXIT_THROW, invCause, null, null);
+	}
 
-    Set<ClassWrapper> setFound = new HashSet<>();
-    processClassRec(node, mapClassMeths, setFound);
+	public static void processClassReferences(ClassNode node) {
+		// find the synthetic method Class class$(String) if present
+		Map<ClassWrapper, MethodWrapper> mapClassMeths = new HashMap<>();
+		mapClassMethods(node, mapClassMeths);
+		if (mapClassMeths.isEmpty()) {
+			return;
+		}
 
-    if (!setFound.isEmpty()) {
-      for (ClassWrapper wrp : setFound) {
-        StructMethod mt = mapClassMeths.get(wrp).methodStruct;
-        wrp.getHiddenMembers().add(InterpreterUtil.makeUniqueKey(mt.getName(), mt.getDescriptor()));
-      }
-    }
-  }
+		Set<ClassWrapper> setFound = new HashSet<>();
+		processClassRec(node, mapClassMeths, setFound);
 
-  private static void processClassRec(ClassNode node, Map<ClassWrapper, MethodWrapper> mapClassMeths, Set<? super ClassWrapper> setFound) {
-    ClassWrapper wrapper = node.getWrapper();
+		if (!setFound.isEmpty())
+		{
+			for (ClassWrapper wrp : setFound)
+			{
+				StructMethod mt = mapClassMeths.get(wrp).methodStruct;
+				wrp.getHiddenMembers().add(InterpreterUtil.makeUniqueKey(mt.getName(), mt.getDescriptor()));
+			}
+		}
+	}
 
-    // search code
-    for (MethodWrapper meth : wrapper.getMethods()) {
-      RootStatement root = meth.root;
-      if (root != null) {
-        DirectGraph graph = meth.getOrBuildGraph();
-        graph.iterateExprents(exprent -> {
-          for (Entry<ClassWrapper, MethodWrapper> ent : mapClassMeths.entrySet()) {
-            if (replaceInvocations(exprent, ent.getKey(), ent.getValue())) {
-              setFound.add(ent.getKey());
-            }
-          }
-          return 0;
-        });
-      }
-    }
+	private static void processClassRec(ClassNode node, Map<ClassWrapper, MethodWrapper> mapClassMeths, Set<?
+			super ClassWrapper> setFound) {
+		ClassWrapper wrapper = node.getWrapper();
 
-    // search initializers
-    for (int j = 0; j < 2; j++) {
-      VBStyleCollection<Exprent, String> initializers =
-        j == 0 ? wrapper.getStaticFieldInitializers() : wrapper.getDynamicFieldInitializers();
+		// search code
+		for (MethodWrapper meth : wrapper.getMethods())
+		{
+			RootStatement root = meth.root;
+			if (root != null)
+			{
+				DirectGraph graph = meth.getOrBuildGraph();
+				graph.iterateExprents(exprent -> {
+					for (Entry<ClassWrapper, MethodWrapper> ent : mapClassMeths.entrySet())
+					{
+						if (replaceInvocations(exprent, ent.getKey(), ent.getValue())) {
+							setFound.add(ent.getKey());
+						}
+					}
+					return 0;
+				});
+			}
+		}
 
-      for (int i = 0; i < initializers.size(); i++) {
-        for (Entry<ClassWrapper, MethodWrapper> ent : mapClassMeths.entrySet()) {
-          Exprent exprent = initializers.get(i);
-          if (replaceInvocations(exprent, ent.getKey(), ent.getValue())) {
-            setFound.add(ent.getKey());
-          }
+		// search initializers
+		for (int j = 0; j < 2; j++)
+		{
+			VBStyleCollection<Exprent, String> initializers =
+					j == 0 ? wrapper.getStaticFieldInitializers() : wrapper.getDynamicFieldInitializers();
 
-          String cl = isClass14Invocation(exprent, ent.getKey(), ent.getValue());
-          if (cl != null) {
-            initializers.set(i, new ConstExprent(VarType.VARTYPE_CLASS, cl.replace('.', '/'), exprent.bytecode));
-            setFound.add(ent.getKey());
-          }
-        }
-      }
-    }
+			for (int i = 0; i < initializers.size(); i++)
+			{
+				for (Entry<ClassWrapper, MethodWrapper> ent : mapClassMeths.entrySet())
+				{
+					Exprent exprent = initializers.get(i);
+					if (replaceInvocations(exprent, ent.getKey(), ent.getValue())) {
+						setFound.add(ent.getKey());
+					}
 
-    // iterate nested classes
-    for (ClassNode nd : node.nested) {
-      processClassRec(nd, mapClassMeths, setFound);
-    }
-  }
+					String cl = isClass14Invocation(exprent, ent.getKey(), ent.getValue());
+					if (cl != null)
+					{
+						initializers.set(i, new ConstExprent(VarType.VARTYPE_CLASS, cl.replace('.', '/'),
+								exprent.bytecode));
+						setFound.add(ent.getKey());
+					}
+				}
+			}
+		}
 
-  private static void mapClassMethods(ClassNode node, Map<ClassWrapper, MethodWrapper> map) {
-    boolean noSynthFlag = DecompilerContext.getOption(IFernflowerPreferences.SYNTHETIC_NOT_SET);
+		// iterate nested classes
+		for (ClassNode nd : node.nested) {
+			processClassRec(nd, mapClassMeths, setFound);
+		}
+	}
 
-    ClassWrapper wrapper = node.getWrapper();
+	private static void mapClassMethods(ClassNode node, Map<ClassWrapper, MethodWrapper> map) {
+		boolean noSynthFlag = DecompilerContext.getOption(IFernflowerPreferences.SYNTHETIC_NOT_SET);
 
-    for (MethodWrapper method : wrapper.getMethods()) {
-      StructMethod mt = method.methodStruct;
+		ClassWrapper wrapper = node.getWrapper();
 
-      if ((noSynthFlag || mt.isSynthetic()) &&
-          mt.getDescriptor().equals("(Ljava/lang/String;)Ljava/lang/Class;") &&
-          mt.hasModifier(CodeConstants.ACC_STATIC)) {
+		for (MethodWrapper method : wrapper.getMethods())
+		{
+			StructMethod mt = method.methodStruct;
 
-        RootStatement root = method.root;
-        if (root != null && root.getFirst().type == Statement.TYPE_TRYCATCH) {
-          CatchStatement cst = (CatchStatement)root.getFirst();
-          if (cst.getStats().size() == 2 && cst.getFirst().type == Statement.TYPE_BASICBLOCK &&
-              cst.getStats().get(1).type == Statement.TYPE_BASICBLOCK &&
-              cst.getVars().get(0).getVarType().equals(new VarType(CodeConstants.TYPE_OBJECT, 0, "java/lang/ClassNotFoundException"))) {
+			if ((noSynthFlag || mt.isSynthetic()) &&
+					mt.getDescriptor().equals("(Ljava/lang/String;)Ljava/lang/Class;") &&
+					mt.hasModifier(CodeConstants.ACC_STATIC))
+			{
 
-            BasicBlockStatement body = (BasicBlockStatement)cst.getFirst();
-            BasicBlockStatement handler = (BasicBlockStatement)cst.getStats().get(1);
+				RootStatement root = method.root;
+				if (root != null && root.getFirst().type == Statement.TYPE_TRYCATCH)
+				{
+					CatchStatement cst = (CatchStatement) root.getFirst();
+					if (cst.getStats().size() == 2 && cst.getFirst().type == Statement.TYPE_BASICBLOCK &&
+							cst.getStats().get(1).type == Statement.TYPE_BASICBLOCK &&
+							cst.getVars().get(0).getVarType().equals(new VarType(CodeConstants.TYPE_OBJECT, 0, "java" +
+									"/lang/ClassNotFoundException")))
+					{
 
-            if (body.getExprents().size() == 1 && handler.getExprents().size() == 1) {
-              if (BODY_EXPR.equals(body.getExprents().get(0)) &&
-                  HANDLER_EXPR.equals(handler.getExprents().get(0))) {
-                map.put(wrapper, method);
-                break;
-              }
-            }
-          }
-        }
-      }
-    }
+						BasicBlockStatement body = (BasicBlockStatement) cst.getFirst();
+						BasicBlockStatement handler = (BasicBlockStatement) cst.getStats().get(1);
 
-    // iterate nested classes
-    for (ClassNode nd : node.nested) {
-      mapClassMethods(nd, map);
-    }
-  }
+						if (body.getExprents().size() == 1 && handler.getExprents().size() == 1)
+						{
+							if (BODY_EXPR.equals(body.getExprents().get(0)) &&
+									HANDLER_EXPR.equals(handler.getExprents().get(0)))
+							{
+								map.put(wrapper, method);
+								break;
+							}
+						}
+					}
+				}
+			}
+		}
 
-  private static boolean replaceInvocations(Exprent exprent, ClassWrapper wrapper, MethodWrapper meth) {
-    boolean res = false;
+		// iterate nested classes
+		for (ClassNode nd : node.nested) {
+			mapClassMethods(nd, map);
+		}
+	}
 
-    while (true) {
-      boolean found = false;
+	private static boolean replaceInvocations(Exprent exprent, ClassWrapper wrapper, MethodWrapper meth) {
+		boolean res = false;
 
-      for (Exprent expr : exprent.getAllExprents()) {
-        String cl = isClass14Invocation(expr, wrapper, meth);
-        if (cl != null) {
-          exprent.replaceExprent(expr, new ConstExprent(VarType.VARTYPE_CLASS, cl.replace('.', '/'), expr.bytecode));
-          found = true;
-          res = true;
-          break;
-        }
+		while (true)
+		{
+			boolean found = false;
 
-        res |= replaceInvocations(expr, wrapper, meth);
-      }
+			for (Exprent expr : exprent.getAllExprents())
+			{
+				String cl = isClass14Invocation(expr, wrapper, meth);
+				if (cl != null)
+				{
+					exprent.replaceExprent(expr, new ConstExprent(VarType.VARTYPE_CLASS, cl.replace('.', '/'),
+							expr.bytecode));
+					found = true;
+					res = true;
+					break;
+				}
 
-      if (!found) {
-        break;
-      }
-    }
+				res |= replaceInvocations(expr, wrapper, meth);
+			}
 
-    return res;
-  }
+			if (!found) {
+				break;
+			}
+		}
 
-  private static String isClass14Invocation(Exprent exprent, ClassWrapper wrapper, MethodWrapper meth) {
-    if (exprent.type == Exprent.EXPRENT_FUNCTION) {
-      FunctionExprent fexpr = (FunctionExprent)exprent;
-      if (fexpr.getFuncType() == FunctionExprent.FUNCTION_IIF) {
-        if (fexpr.getLstOperands().get(0).type == Exprent.EXPRENT_FUNCTION) {
-          FunctionExprent headexpr = (FunctionExprent)fexpr.getLstOperands().get(0);
-          if (headexpr.getFuncType() == FunctionExprent.FUNCTION_EQ) {
-            if (headexpr.getLstOperands().get(0).type == Exprent.EXPRENT_FIELD &&
-                headexpr.getLstOperands().get(1).type == Exprent.EXPRENT_CONST &&
-                ((ConstExprent)headexpr.getLstOperands().get(1)).getConstType().equals(VarType.VARTYPE_NULL)) {
+		return res;
+	}
 
-              FieldExprent field = (FieldExprent)headexpr.getLstOperands().get(0);
-              ClassNode fieldnode = DecompilerContext.getClassProcessor().getMapRootClasses().get(field.getClassname());
+	private static String isClass14Invocation(Exprent exprent, ClassWrapper wrapper, MethodWrapper meth) {
+		if (exprent.type == Exprent.EXPRENT_FUNCTION)
+		{
+			FunctionExprent fexpr = (FunctionExprent) exprent;
+			if (fexpr.getFuncType() == FunctionExprent.FUNCTION_IIF)
+			{
+				if (fexpr.getLstOperands().get(0).type == Exprent.EXPRENT_FUNCTION)
+				{
+					FunctionExprent headexpr = (FunctionExprent) fexpr.getLstOperands().get(0);
+					if (headexpr.getFuncType() == FunctionExprent.FUNCTION_EQ)
+					{
+						if (headexpr.getLstOperands().get(0).type == Exprent.EXPRENT_FIELD &&
+								headexpr.getLstOperands().get(1).type == Exprent.EXPRENT_CONST &&
+								((ConstExprent) headexpr.getLstOperands().get(1)).getConstType().equals(VarType.VARTYPE_NULL))
+						{
 
-              if (fieldnode != null && fieldnode.classStruct.qualifiedName.equals(wrapper.getClassStruct().qualifiedName)) { // source class
-                StructField fd =
-                  wrapper.getClassStruct().getField(field.getName(), field.getDescriptor().descriptorString);  // FIXME: can be null! why??
+							FieldExprent field = (FieldExprent) headexpr.getLstOperands().get(0);
+							ClassNode fieldnode =
+									DecompilerContext.getClassProcessor().getMapRootClasses().get(field.getClassname());
 
-                if (fd != null && fd.hasModifier(CodeConstants.ACC_STATIC) &&
-                    (fd.isSynthetic() || DecompilerContext.getOption(IFernflowerPreferences.SYNTHETIC_NOT_SET))) {
+							if (fieldnode != null && fieldnode.classStruct.qualifiedName.equals(wrapper.getClassStruct().qualifiedName))
+							{ // source class
+								StructField fd =
+										wrapper.getClassStruct().getField(field.getName(),
+												field.getDescriptor().descriptorString);  // FIXME: can be null! why??
 
-                  if (fexpr.getLstOperands().get(1).type == Exprent.EXPRENT_ASSIGNMENT && fexpr.getLstOperands().get(2).equals(field)) {
-                    AssignmentExprent asexpr = (AssignmentExprent)fexpr.getLstOperands().get(1);
+								if (fd != null && fd.hasModifier(CodeConstants.ACC_STATIC) &&
+										(fd.isSynthetic() || DecompilerContext.getOption(IFernflowerPreferences.SYNTHETIC_NOT_SET)))
+								{
 
-                    if (asexpr.getLeft().equals(field) && asexpr.getRight().type == Exprent.EXPRENT_INVOCATION) {
-                      InvocationExprent invexpr = (InvocationExprent)asexpr.getRight();
+									if (fexpr.getLstOperands().get(1).type == Exprent.EXPRENT_ASSIGNMENT && fexpr.getLstOperands().get(2).equals(field))
+									{
+										AssignmentExprent asexpr = (AssignmentExprent) fexpr.getLstOperands().get(1);
 
-                      if (invexpr.getClassname().equals(wrapper.getClassStruct().qualifiedName) &&
-                          invexpr.getName().equals(meth.methodStruct.getName()) &&
-                          invexpr.getStringDescriptor().equals(meth.methodStruct.getDescriptor())) {
+										if (asexpr.getLeft().equals(field) && asexpr.getRight().type == Exprent.EXPRENT_INVOCATION)
+										{
+											InvocationExprent invexpr = (InvocationExprent) asexpr.getRight();
 
-                        if (invexpr.getLstParameters().get(0).type == Exprent.EXPRENT_CONST) {
-                          wrapper.getHiddenMembers()
-                            .add(InterpreterUtil.makeUniqueKey(fd.getName(), fd.getDescriptor()));  // hide synthetic field
-                          return ((ConstExprent)invexpr.getLstParameters().get(0)).getValue().toString();
-                        }
-                      }
-                    }
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    }
+											if (invexpr.getClassname().equals(wrapper.getClassStruct().qualifiedName) &&
+													invexpr.getName().equals(meth.methodStruct.getName()) &&
+													invexpr.getStringDescriptor().equals(meth.methodStruct.getDescriptor()))
+											{
 
-    return null;
-  }
+												if (invexpr.getLstParameters().get(0).type == Exprent.EXPRENT_CONST)
+												{
+													wrapper.getHiddenMembers()
+															.add(InterpreterUtil.makeUniqueKey(fd.getName(),
+																	fd.getDescriptor()));  // hide synthetic field
+													return ((ConstExprent) invexpr.getLstParameters().get(0)).getValue().toString();
+												}
+											}
+										}
+									}
+								}
+							}
+						}
+					}
+				}
+			}
+		}
+
+		return null;
+	}
 }
